objects/QIDC__MDM_Entity_Attribute_ims__c.object
<CustomObject>
    <description>This object is used to store Attributes for MDM Entities and Relations.</description>
    <fields>
        <fullName>QIDC__Attribute_Expression_ims__c</fullName>
        <description>This field is used to define JSON structure for attribute value. It should have dataSource, list of criteria and result field.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to define JSON structure for attribute value. It should have dataSource, list of criteria and result field.</inlineHelpText>
        <label>Attribute Expression</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__Description_ims__c</fullName>
        <description>Description for the attribute type.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Description for the attribute type.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__ForeignKeyEntityTypeURI_ims__c</fullName>
        <description>This field is used to store either start / end object uri for relations.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to store either start / end object uri for relations.</inlineHelpText>
        <label>Foreign Key Entity Type URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Is_Denormalized_ims__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to indicate whether the MDM attribute is denormalized or not.</description>
        <inlineHelpText>This field is used to indicate whether the MDM attribute is denormalized or not.</inlineHelpText>
        <label>Is Denormalized?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QIDC__Is_Required_ims__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to indicate whether the MDM attribute is required or not in mappings.</description>
        <inlineHelpText>This field is used to indicate whether the MDM attribute is required or not in mappings.</inlineHelpText>
        <label>Is Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QIDC__Label_ims__c</fullName>
        <description>Readable name of the attribute.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Readable name of the attribute.</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Lookup_Code_ims__c</fullName>
        <description>This field is used to store the lookup type code of an attribute.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to store the lookup type code of an attribute.</inlineHelpText>
        <label>Lookup Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__MDM_Entity_ims__c</fullName>
        <description>This field is used to store the reference of MDM Entity or Relation</description>
        <inlineHelpText>This field is used to store the reference of MDM Entity or Relation</inlineHelpText>
        <label>MDM Entity</label>
        <referenceTo>QIDC__MDM_Entity_ims__c</referenceTo>
        <relationshipLabel>MDM Entity Attributes</relationshipLabel>
        <relationshipName>MDM_Entity_Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QIDC__Parent_Attribute_ims__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This attribute is used to store the parent reference for 1- level down of nested attributes.(DEPRECATED)</description>
        <inlineHelpText>This attribute is used to store the parent reference for 1- level down of nested attributes. (DEPRECATED)</inlineHelpText>
        <label>Parent Attribute (DEPRECATED)</label>
        <referenceTo>QIDC__MDM_Entity_Attribute_ims__c</referenceTo>
        <relationshipLabel>MDM Entity Attributes</relationshipLabel>
        <relationshipName>Parent_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QIDC__ReferencedEntityTypeURI_ims__c</fullName>
        <description>URI of entity type or role that is referenced from an entity though &apos;ReferencedEntityTypeURI&apos;. This field is applicable only for &apos;Reference&apos; Type attributes.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>URI of entity type or role that is referenced from an entity though &apos;ReferencedEntityTypeURI&apos;. This field is applicable only for &apos;Reference&apos; Type attributes.</inlineHelpText>
        <label>Referenced Entity Type URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__RelationshipTypeURI_ims__c</fullName>
        <description>URI of a relationship type used in the reference attribute.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>URI of a relationship type used in the reference attribute.</inlineHelpText>
        <label>Relationship Type URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Type_ims__c</fullName>
        <description>Data type of attribute. (Simple, Nested or Reference)</description>
        <inlineHelpText>Data type of attribute. (Simple, Nested or Reference)</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>String</fullName>
                </value>
                <value>
                    <fullName>StringNotTokenized</fullName>
                </value>
                <value>
                    <fullName>Long</fullName>
                </value>
                <value>
                    <fullName>Int</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Float</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Timestamp</fullName>
                </value>
                <value>
                    <fullName>Blob</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>Blog URL</fullName>
                </value>
                <value>
                    <fullName>Image URL</fullName>
                </value>
                <value>
                    <fullName>SSN</fullName>
                </value>
                <value>
                    <fullName>Id card (Passport)</fullName>
                </value>
                <value>
                    <fullName>SIC-code</fullName>
                </value>
                <value>
                    <fullName>NAICS-code</fullName>
                </value>
                <value>
                    <fullName>Email domains</fullName>
                </value>
                <value>
                    <fullName>Ticker symbol</fullName>
                </value>
                <value>
                    <fullName>CIK id</fullName>
                </value>
                <value>
                    <fullName>Stock exchange</fullName>
                </value>
                <value>
                    <fullName>GeoLocation</fullName>
                </value>
                <value>
                    <fullName>Nested</fullName>
                </value>
                <value>
                    <fullName>Time</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>MDM ID</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__URI_ims__c</fullName>
        <description>Path that is used to reach the attribute configuration.
Format: configuration/{objectType}/attributes/{AttributeName}</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Path that is used to reach the attribute configuration.
Format: configuration/{objectType}/attributes/{AttributeName}</inlineHelpText>
        <label>URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MDM Entity Attribute</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDM Entity Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>